[package]
name = "dollar"
authors = ["Andre <andre.rodrigues9911@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "This lib have some financial functions tested and ready to use." 
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/tommatti99/dollar"

[dependencies]
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]